--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Anna Mazhar</h1>
     <div class="nav-links">
         <a href="#home">Home</a>
-        <a href="../assets/pdfs/my_cv.pdf">CV</a>
+        <a href="assets/pdfs/my_cv.pdf">CV</a>
         <a href="#publications">Publications</a>
         <a href="#projects">Projects</a>
     </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="profile-image-container">
-            <img src="../assets/images/anna.jpg" alt="Profile Image" class="profile-image"> <!-- Placeholder image -->
+            <img src="assets/images/anna.jpg" alt="Profile Image" class="profile-image"> <!-- Placeholder image -->
             <div class="title">Ph.D. Candidate</div> <div class="university">Cornell University</div>
             
         </div>
@@ -116,7 +116,7 @@
         </ul> -->
 
         <!-- Cute Sticker Image -->
-        <img src="../assets/images/cat.png" alt="Cute Sticker" class="sticker">  
+        <img src="assets/images/cat.png" alt="Cute Sticker" class="sticker">  
     </div>
 
 </div>
