Add visits tracker

--- a/index.html
+++ b/index.html
@@ -168,11 +168,15 @@
     </ul>
 </div>
 
+<!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=aa6167&w=a&t=tt&d=kZkuJ7a-tbKLUmNR-w75diwYVRSXBbxyOD9y1P_-ovA&co=cbc1c1&cmo=756a6a&cmn=ffffff&ct=ffffff'></script> -->
+<a style="display:none" href="https://clustrmaps.com/site/1c211" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=kZkuJ7a-tbKLUmNR-w75diwYVRSXBbxyOD9y1P_-ovA&cl=ffffff"></a>
+<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=kZkuJ7a-tbKLUmNR-w75diwYVRSXBbxyOD9y1P_-ovA"></script> -->
 
     <footer>
         <p>&copy; Anna Mazhar, 2024. All rights reserved.</p>
     </footer>
 </div>
+
 
 </body>
 </html>
