--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Anna Mazhar - Personal Website</title>
+    <title>Anna Mazhar</title>
     <link rel="stylesheet" href="https://latex.vercel.app/style.min.css"> <!-- Ensure this loads first -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
     <link rel="stylesheet" href="style.css"> <!-- Custom styles loaded last -->
+    <link rel="icon" href="assets/images/handsome.jpeg">
 </head>
 
 
