Bullet indent bug

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="work-experience" class="card work-card">
         <h3>Work Experience</h3>
 
-        <p>
+        <p class="work-exp-p">
             <strong>Research Assistant</strong> - <a href="https://github.com/xlab-uiuc">xlab, UIUC</a> <br>
             <em>Sep. 2022 – May 2024 </em>| <em>USA</em><br>
             - Local Developer Testing and Cloud Emulation<br>
@@ -84,7 +84,7 @@
             - Tooling for Testing Cloud-based Software in CI/CD Environments
         </p>
 
-        <p>
+        <p class="work-exp-p">
             <strong>Research Assistant</strong> - <a href="https://lums.edu.pk/">Networks and Systems Group, LUMS</a> <br>
             <em>Jun. 2020 – May 2022 </em>| <em>Pakistan</em><br>
             - Webpage Load Performance Testing on Low-end Devices<br>
@@ -92,7 +92,7 @@
             - Lighthouse, Puppeteer, and WebPageTest
         </p>
 
-        <p>
+        <p class="work-exp-p">
             <strong>Research Intern</strong> - <a href="https://dlab.epfl.ch/">dlab, EPFL</a> <br>
             <em>Jun. 2021 – Dec. 2021 </em>| <em>Switzerland</em><br>
             - Natural Language Processing (NLP)<br>
