--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <li><strong>Testing for Machine Unlearning</strong> | Pandas, NumPy, scikit-learn, SHAP <span class="date">(Sep. 2024 - Present)</span><br>
         <div>Developing a suite to assess feature unlearning in ML models, evaluating existing metrics for accuracy and limitations.</div></li>
         
-        <li><strong>Verifying Cloud Block Storage in Coq</strong> | Coq <span class="date">(Oct. 2024 - Present)</span><br>
-        <div>Developing a Coq-based verification framework using separation logic to model cloud storage properties.</div></li>
+        <li><strong>Verifying AVL in Coq</strong> | Coq <span class="date">(Oct. 2024 - Present)</span><br>
+        <div>Implementing and formally verifying AVL tree data structure using Coq proof assistant.</div></li>
         
         <li><strong>Multi-Writer Multi-Reader Shared Registers</strong> | Go, gRPC, Protobuf <span class="date">(Apr. 2023 - May 2023)</span><br>
         <div>Implemented a MWMR Shared Register protocol with fault tolerance and data consistency through quorum-based operations.</div></li>
