--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <h3>Publications</h3>
     <p>
         <strong>Fidelity of Cloud Emulators: The Imitation Game of Testing Cloud-based Software</strong> 
-        <a href="pdfs/cloudtest.pdf">[bib]</a> 
+        <a href="assets/pdfs/cloudtest.pdf">[pdf]</a> | <a href="https://www.microsoft.com/en-us/research/publication/fidelity-of-cloud-emulators-the-imitation-game-of-testing-cloud-based-software/bibtex/">[bib]</a> 
         <br>
         <a href="https://anna-mazhar.github.io">Anna Mazhar</a>, Saad Sher Alam, William Zheng, Yinfang Chen, Suman Nath, and Tianyin Xu
         <br>
