--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 Hi! I am Anna, a first-year PhD student at 
                 <a href="#">Cornell University</a>, advised by 
                 <a href="https://sainyamgalhotra.com/">Sainyam Galhotra</a>. 
-                My research spans a wide range of interests focused on rigorous testing 
+                My research spans a wide range of interests, focused on rigorous testing 
                 and evaluation techniques to ensure the reliability and correctness 
-                of softwares and machine learning models based on their specifications.
+                of software and AI systems according to their specifications.
                 <br><br>
                 Before starting at Cornell, I completed my MS in Computer Science at UIUC, 
                 advised by <a href="https://tianyin.github.io">Tianyin Xu</a>. 
