--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <h3>Selected Projects</h3>
     <ul>
         <li><strong>Testing for Machine Unlearning</strong> | Pandas, NumPy, scikit-learn, SHAP <span class="date">(Sep. 2024 - Present)</span><br>
-        <div>Developing a suite to assess feature unlearning in AI models, evaluating existing metrics for accuracy and limitations.</div></li>
+        <div>Developing a suite to assess unlearning in AI models, evaluating existing metrics for accuracy and limitations.</div></li>
         
         <li><strong>Verifying AVL in Coq</strong> | Coq <span class="date">(Oct. 2024 - Present)</span><br>
         <div>Implementing and formally verifying the operations of AVL tree data structure using Coq proof assistant.</div></li>
