--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div class="card" id="awards">
     <h3>Selected Awards</h3>
     <ul>
-        <li><strong>SIGSOFT Travel Grant</strong> - Travel Grant for attending conferences</li>
+        <li><strong>SIGSOFT Travel Grant</strong> - Travel support for attending conferences</li>
         <li><strong>Erasmus Mundus Scholarship</strong> (€49000) - Awarded to 26 applicants out of 735.</li>
         <li><strong>LUMS Merit Scholarship Award</strong> (5000 USD) - For academic excellence.</li>
         <li><strong>Dean’s Honor List (LUMS)</strong> - Recognized three consecutive times for academic performance.</li>
